--- a/index.html
+++ b/index.html
@@ -7,48 +7,58 @@
         <title>Awesome Website</title>
     </head>
     <body>
-        <header>
-            Header Logo
-            <nav>
-                <ul>
-                    <li><a>header link one</a></li>
-                    <li><a>header link two</a></li>
-                    <li><a>header link three</a></li>
-                </ul>
-            </nav>
-        </header>
-        <section>
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-            <button>Sign up</button>
-            <img alt="this is a placeholder for an image">
-        </section>
-        <section>
-            <h2>Some random information.</h2>
-            <img><p>this is some subtext under an illustration or image</p>
-            <img><p>this is some subtext under an illustration or image</p>
-            <img><p>this is some subtext under an illustration or image</p>
-            <img><p>this is some subtext under an illustration or image</p>
-        </section>
-        <section>
-            <blockquote>
-                This is an inspiring quote, or a testimonial from a customer
-                Maybe it's just filling up space, or maybe people will actually
-                read it. Who knows? All I know is that it looks nice.
-                <footer>Thor, God of Thunder</footer>
-            </blockquote>
-        </section>
-        <section>
-            <h2>Call to action! It's time!</h2>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
-        </section>
-        <footer>
-            <section class="copyright">Copyright © The Odin Project 2024</section>
-            <section>
-                <a target="_blank" href="https://icons8.com/icon/96728/zombie-hand-thumbs-up">Zombie Hand Thumbs Up</a>
-                icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-            </section>
-        </footer>
+        <div class="container">
+            <header>
+                <h1>Header Logo</h1>
+                <nav>
+                    <ul>
+                        <li><a href="/">header link one</a></li>
+                        <li><a href="/">header link two</a></li>
+                        <li><a href="/">header link three</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <section class="hero">
+                    <div class="left">
+                        <h1>This website is awesome</h1>
+                        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                        <button class="action">Sign up</button>
+                    </div>
+                    <div class="right">
+                        <p>this is a placeholder for an image</p>
+                    </div>
+                </section>
+                <section>
+                    <h2>Some random information.</h2>
+                    <img><p>this is some subtext under an illustration or image</p>
+                    <img><p>this is some subtext under an illustration or image</p>
+                    <img><p>this is some subtext under an illustration or image</p>
+                    <img><p>this is some subtext under an illustration or image</p>
+                </section>
+                <section>
+                    <blockquote>
+                        This is an inspiring quote, or a testimonial from a customer
+                        Maybe it's just filling up space, or maybe people will actually
+                        read it. Who knows? All I know is that it looks nice.
+                        <footer>Thor, God of Thunder</footer>
+                    </blockquote>
+                </section>
+                <section>
+                    <div class="action">
+                        <h2>Call to action! It's time!</h2>
+                        <p>Sign up for our product by clicking that button right over there!</p>
+                        <button>Sign up</button>
+                    </div>
+                </section>
+            </main>
+            <footer>
+                <section class="copyright">Copyright © The Odin Project 2024</section>
+                <section>
+                    <a target="_blank" href="https://icons8.com/icon/96728/zombie-hand-thumbs-up">Zombie Hand Thumbs Up</a>
+                    icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+                </section>
+            </footer>
+        </div>
     </body>
 </html>
