--- a/index.html
+++ b/index.html
@@ -29,12 +29,22 @@
                         <p>this is a placeholder for an image</p>
                     </div>
                 </section>
-                <section>
+                <section class="info">
                     <h2>Some random information.</h2>
-                    <img><p>this is some subtext under an illustration or image</p>
-                    <img><p>this is some subtext under an illustration or image</p>
-                    <img><p>this is some subtext under an illustration or image</p>
-                    <img><p>this is some subtext under an illustration or image</p>
+                    <div class="deck">
+                        <div class="card">
+                            <div class="image"></div><p>this is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="card">
+                            <div class="image"></div><p>this is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="card">
+                            <div class="image"></div><p>this is some subtext under an illustration or image</p>
+                        </div>
+                        <div class="card">
+                            <div class="image"></div><p>this is some subtext under an illustration or image</p>
+                        </div>
+                    </div>
                 </section>
                 <section>
                     <blockquote>
