Basic outline and style complete.

--- a/index.html
+++ b/index.html
@@ -46,28 +46,30 @@
                         </div>
                     </div>
                 </section>
-                <section>
+                <section class="quote">
                     <blockquote>
                         This is an inspiring quote, or a testimonial from a customer
                         Maybe it's just filling up space, or maybe people will actually
                         read it. Who knows? All I know is that it looks nice.
-                        <footer>Thor, God of Thunder</footer>
+                        <footer>- Thor, God of Thunder</footer>
                     </blockquote>
                 </section>
-                <section>
+                <section class="action">
                     <div class="action">
-                        <h2>Call to action! It's time!</h2>
-                        <p>Sign up for our product by clicking that button right over there!</p>
-                        <button>Sign up</button>
+                        <div>
+                            <h2>Call to action! It's time!</h2>
+                            <p>Sign up for our product by clicking that button right over there!</p>
+                        </div>
+                        <button class="action">Sign up</button>
                     </div>
                 </section>
             </main>
             <footer>
-                <section class="copyright">Copyright © The Odin Project 2024</section>
-                <section>
+                <div class="copyright">Copyright © The Odin Project 2024</div>
+                <div>
                     <a target="_blank" href="https://icons8.com/icon/96728/zombie-hand-thumbs-up">Zombie Hand Thumbs Up</a>
                     icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-                </section>
+                </div>
             </footer>
         </div>
     </body>
